--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="rate_safety">Rate safety:</string>
     <string name="tell_us_safety">Tell us about how safe you felt.</string>
     <string name="submit">Submit</string>
+    <string name="date_of_birth">Date of birth</string>
 </resources>
